interlink-core/error.txt
    Checking cfg-if v1.0.4
    Checking windows-link v0.2.1
    Checking pin-project-lite v0.2.16
    Checking tap v1.0.1
    Checking once_cell v1.21.3
    Checking spin v0.9.8
    Checking funty v2.0.0
    Checking memchr v2.8.0
    Checking subtle v2.6.1
    Checking crossbeam-utils v0.8.21
    Checking radium v0.7.0
    Checking windows_x86_64_msvc v0.53.1
    Checking smallvec v1.15.1
    Checking futures-sink v0.3.32
    Checking futures-core v0.3.32
    Checking arrayvec v0.7.6
    Checking windows-sys v0.61.2
    Checking getrandom v0.2.17
    Checking windows-targets v0.53.5
    Checking either v1.15.0
    Checking wyz v0.5.1
    Checking lazy_static v1.5.0
    Checking constant_time_eq v0.4.2
    Checking scopeguard v1.2.0
    Checking futures-channel v0.3.32
    Checking futures-io v0.3.32
    Checking tracing-core v0.1.36
    Checking rand_core v0.6.4
    Checking arrayref v0.3.9
    Checking futures-task v0.3.32
    Checking slab v0.4.12
    Checking lock_api v0.4.14
    Checking parking_lot_core v0.9.12
    Checking windows-sys v0.60.2
    Checking serde_core v1.0.228
    Checking blake2b_simd v1.0.4
    Checking hashbrown v0.12.3
    Checking static_assertions v1.1.0
    Checking rand v0.8.5
    Checking log v0.4.29
    Checking zmij v1.0.21
    Checking crossbeam-epoch v0.9.18
    Checking sharded-slab v0.1.7
    Checking thread_local v1.1.9
    Checking bitvec v1.0.1
    Checking itoa v1.0.17
    Checking parking_lot v0.12.5
    Checking futures-util v0.3.32
    Checking tracing v0.1.44
    Checking bytes v1.11.1
    Checking tracing-log v0.2.0
    Checking crossbeam-deque v0.8.6
    Checking indexmap v1.9.3
    Checking rayon-core v1.13.0
    Checking rayon v1.11.0
    Checking socket2 v0.6.2
    Checking ff v0.13.1
    Checking serde_json v1.0.149
    Checking serde v1.0.228
    Checking group v0.13.0
    Checking pasta_curves v0.5.1
    Checking mio v1.1.1
    Checking nu-ansi-term v0.50.3
    Checking tracing-subscriber v0.3.22
    Checking futures-executor v0.3.32
    Checking tokio v1.49.0
    Checking maybe-rayon v0.1.1
    Checking halo2_proofs v0.3.2
    Checking futures v0.3.32
    Checking interlink-core v0.1.0 (C:\Users\Ishaan\OneDrive\Desktop\Cobalt\interlink-core)
error[E0432]: unresolved import `halo2_proofs::arithmetic::FieldExt`
 --> interlink-core\src\circuit.rs:3:5
  |
3 |     arithmetic::FieldExt,
  |     ^^^^^^^^^^^^^^^^^^^^ no `FieldExt` in `arithmetic`

warning: unused imports: `AssignedCell` and `Fixed`
 --> interlink-core\src\circuit.rs:4:15
  |
4 |     circuit::{AssignedCell, Layouter, SimpleFloorPlanner},
  |               ^^^^^^^^^^^^
5 |     plonk::{Advice, Circuit, Column, ConstraintSystem, Error, Fixed, Instance, Selector},
  |                                                               ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Message`
 --> interlink-core\src\relayer.rs:1:21
  |
1 | use crate::{Result, Message};
  |                     ^^^^^^^

For more information about this error, try `rustc --explain E0432`.
warning: `interlink-core` (lib) generated 2 warnings
error: could not compile `interlink-core` (lib) due to 1 previous error; 2 warnings emitted
